Локализована статистика. Если телефон на руссском языке - грузится ссылка русской статистики, иначе ссылка на английскую статистику

--- a/iLoveBetsRus/iLoveBetsRus.xcodeproj/xcshareddata/xcschemes/iLoveBetsRus.xcscheme
+++ b/iLoveBetsRus/iLoveBetsRus.xcodeproj/xcshareddata/xcschemes/iLoveBetsRus.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EDB5257E2368B3D0002428AB"
-               BuildableName = "&#x43d;&#x421;&#x442;&#x430;&#x432;&#x43a;&#x438; &#x425;&#x41f; &#x421;&#x43f;&#x43e;&#x440;&#x442;&#x438;&#x432;&#x43d;&#x44b;&#x435; &#x41f;&#x440;&#x43e;&#x433;&#x43d;&#x43e;&#x437;&#x44b;.app"
+               BuildableName = "&#x421;&#x442;&#x430;&#x432;&#x43a;&#x438; &#x425;&#x41f; &#x421;&#x43f;&#x43e;&#x440;&#x442;&#x438;&#x432;&#x43d;&#x44b;&#x435; &#x41f;&#x440;&#x43e;&#x433;&#x43d;&#x43e;&#x437;&#x44b;.app"
                BlueprintName = "iLoveBetsRus"
                ReferencedContainer = "container:iLoveBetsRus.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EDB5257E2368B3D0002428AB"
-            BuildableName = "&#x43d;&#x421;&#x442;&#x430;&#x432;&#x43a;&#x438; &#x425;&#x41f; &#x421;&#x43f;&#x43e;&#x440;&#x442;&#x438;&#x432;&#x43d;&#x44b;&#x435; &#x41f;&#x440;&#x43e;&#x433;&#x43d;&#x43e;&#x437;&#x44b;.app"
+            BuildableName = "&#x421;&#x442;&#x430;&#x432;&#x43a;&#x438; &#x425;&#x41f; &#x421;&#x43f;&#x43e;&#x440;&#x442;&#x438;&#x432;&#x43d;&#x44b;&#x435; &#x41f;&#x440;&#x43e;&#x433;&#x43d;&#x43e;&#x437;&#x44b;.app"
             BlueprintName = "iLoveBetsRus"
             ReferencedContainer = "container:iLoveBetsRus.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EDB5257E2368B3D0002428AB"
-            BuildableName = "&#x43d;&#x421;&#x442;&#x430;&#x432;&#x43a;&#x438; &#x425;&#x41f; &#x421;&#x43f;&#x43e;&#x440;&#x442;&#x438;&#x432;&#x43d;&#x44b;&#x435; &#x41f;&#x440;&#x43e;&#x433;&#x43d;&#x43e;&#x437;&#x44b;.app"
+            BuildableName = "&#x421;&#x442;&#x430;&#x432;&#x43a;&#x438; &#x425;&#x41f; &#x421;&#x43f;&#x43e;&#x440;&#x442;&#x438;&#x432;&#x43d;&#x44b;&#x435; &#x41f;&#x440;&#x43e;&#x433;&#x43d;&#x43e;&#x437;&#x44b;.app"
             BlueprintName = "iLoveBetsRus"
             ReferencedContainer = "container:iLoveBetsRus.xcodeproj">
          </BuildableReference>
