--- a/iLoveBetsRus/Podfile
+++ b/iLoveBetsRus/Podfile
@@ -1,6 +1,6 @@
 # Uncomment the next line to define a global platform for your project
 
-platform :ios, '9.0'
+platform :ios, '11.2'
 
 target 'iLoveBetsRus' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -14,6 +14,8 @@ pod 'Firebase/Database'
 pod 'Firebase/Auth'
 pod 'Firebase/Storage'
 pod 'JSQMessagesViewController'
+
+pod 'ApphudSDK'
 
 
   # Pods for iLoveBetsRus
